--- a/_posts/2020-02-07-Kaggle 시작하기 및 타이타닉 문제.md
+++ b/_posts/2020-02-07-Kaggle 시작하기 및 타이타닉 문제.md
@@ -10,6 +10,6 @@ use_math: true
 
 ## 시작하기
 
-<img src="https://raw.githubusercontent.com/jsstar522/jsstar522.github.io/master/static/img/_posts/20200207/1.png" alt="distribution" style="width:500px;"/>
+<img src="https://raw.githubusercontent.com/jsstar522/jsstar522.github.io/master/static/img/_posts/20200207/1.png" alt="distribution" style="width:500px; margin: 0 auto;"/>
 
 https://www.kaggle.com/c/titanic/에 들어가면 kaggle에 가장 기본 문제인 타이타닉 문제를 만날 수 있다.
