--- a/_posts/2020-05-16-해시.md
+++ b/_posts/2020-05-16-해시.md
@@ -49,7 +49,7 @@ c++ std에는 hash_map이 들어있지 않다. 그리고 c++11 부터 해시 테
 
 
 
-완주명단을 unordered_map으로 만들고 `key를 이름`으로 두고 `value를 완주여부`로 둔다.
+unordered_map으로 만들고 효율적인 검색을 위해 `key를 이름`으로 둔다. hash map 안에서 이름을 검색하며 value를 완주여부로 이용하면 된다.
 
 ```c++
 #include <iostream>
@@ -60,31 +60,32 @@ c++ std에는 hash_map이 들어있지 않다. 그리고 c++11 부터 해시 테
 using namespace std;
 
 string solution(vector<string> participant, vector<string> completion) {
-    string answer = "";
+    string answer = "";    
     
-    // 완주자 명단
     unordered_map <string, int> list_complt;
-    
-    for(int i=0; i<completion.size(); i++){
-        list_complt.insert(make_pair(completion[i], 1));
-    }
-    
-    // 참가자 중 list_complt에 없는 사람 찾기 (0인 사람)
+
     for(int i=0; i<participant.size(); i++){
-        if(list_complt[participant[i]] == 0){
-            answer = participant[i];
-            return answer;
-        }else{
-            // 중복된 이름이 있을 수 있으므로 이미 체크된 한 사람은 표시해둬야한다
-            list_complt[participant[i]] = 0;    
-        }
-        ;
+        list_complt[participant[i]]++;
     }
+    for(int i=0; i<completion.size(); i++){
+        list_complt[completion[i]]--;
+    }
+    
+    for(auto pair: list_complt){
+        if(pair.second > 0){
+            answer = pair.first;
+        }
+    }
+    
     return answer;
 }
 ```
 
-완주자 hash_map은 `list_complt["eden"] = 1` 과 같이 저장된다. eden을 앞에와 같이 조회하면 1을 내뱉는다. 이미 확인을 한 참가자는 0으로 바꿔줘야 동일인물 중 한명이 완주자가 아닐 때 완주자가 아닌 사람으로 판단할 수 있다.
+한명(key) 당 value가 1씩 더해서 들어간다. 동명이인으로 두명이 있을 때는 `list_complt` 에 2로 들어간다. 참가자를 먼저 hash에 넣고 완주자의 이름을 key값으로 검색하면서 1씩 빼줬을 때, 완주자 명단에 없는 사람은 1이상의 value값을 가지고 있을 것이다.
+
+
+
+> hash는 1대1 대응이기 때문에 중복된 key-value가 들어갈 수 없다. 문제에서 동명이인이 있을 수 있다고 했다. 예를들어 "js"가 두명이 있을 때, hash에는 ["js": 1, "js": 1] 과 같이 들어가지 않고 ["js": 1] 로 한번만 들어가게 된다. 
 
 
 
