--- a/_posts/2020-05-16-해시.md
+++ b/_posts/2020-05-16-해시.md
@@ -81,6 +81,8 @@ string solution(vector<string> participant, vector<string> completion) {
 }
 ```
 
+> c++11 에서는 range-based for문을 제공하여 요소기반으로 손쉽게 for문을 구성할 수 있다. for(int a : vector){...} 와 같이 작성할 수 있다.
+
 한명(key) 당 value가 1씩 더해서 들어간다. 동명이인으로 두명이 있을 때는 `list_complt` 에 2로 들어간다. 참가자를 먼저 hash에 넣고 완주자의 이름을 key값으로 검색하면서 1씩 빼줬을 때, 완주자 명단에 없는 사람은 1이상의 value값을 가지고 있을 것이다.
 
 
@@ -147,5 +149,189 @@ bool solution(vector<string> phone_book) {
 
 
 
+### 위장
 
+https://programmers.co.kr/learn/courses/30/lessons/42578
+
+#### 문제
+
+```
+스파이들은 매일 다른 옷을 조합하여 입어 자신을 위장합니다.
+
+예를 들어 스파이가 가진 옷이 아래와 같고 오늘 스파이가 동그란 안경, 긴 코트, 파란색 티셔츠를 입었다면 다음날은 청바지를 추가로 입거나 동그란 안경 대신 검정 선글라스를 착용하거나 해야 합니다.
+
+종류	이름
+얼굴	동그란 안경, 검정 선글라스
+상의	파란색 티셔츠
+하의	청바지
+겉옷	긴 코트
+
+스파이가 가진 의상들이 담긴 2차원 배열 clothes가 주어질 때 서로 다른 옷의 조합의 수를 return 하도록 solution 함수를 작성해주세요.
+```
+
+#### 제한사항
+
+```
+clothes의 각 행은 [의상의 이름, 의상의 종류]로 이루어져 있습니다.
+스파이가 가진 의상의 수는 1개 이상 30개 이하입니다.
+같은 이름을 가진 의상은 존재하지 않습니다.
+clothes의 모든 원소는 문자열로 이루어져 있습니다.
+모든 문자열의 길이는 1 이상 20 이하인 자연수이고 알파벳 소문자 또는 '_' 로만 이루어져 있습니다.
+스파이는 하루에 최소 한 개의 의상은 입습니다.
+```
+
+#### 예시
+
+```
+## clothes, return
+[[yellow_hat, headgear], [blue_sunglasses, eyewear], [green_turban, headgear]]	5
+[[crow_mask, face], [blue_sunglasses, face], [smoky_makeup, face]]	3
+```
+
+#### 풀이
+
+항목을 정리하는 문제는 대부분 hash map으로 풀 수 있다. 먼저 경우의 수를 구하는 방법을 생각해보자. 하나는 착용하고 하나는 착용하지 않을 수 있으므로 `착용하지 않음`의 항목을 추가하는 것이 포인트이다. 모자 종류 2개, 안경 종류 1개인 경우, 경우의 수는 (2+1)*(1+1) = 6이다. 하지만 모두 착용하지 않는 경우의 수는 빼줘야하므로 마지막에 -1을 해준다. 이 계산을 하기 위해서는 **항목별 옷의 개수를 세야한다.**
+
+```c++
+#include <iostream>
+#include <string>
+#include <vector>
+#include <unordered_map>
+
+using namespace std;
+
+int solution(vector<vector<string>> clothes) {
+    // 각 항목별로 나열하고 "착용x"를 추가하면 경우의 수를 구할 수 있다. (항목 +1)
+    // 모두 착용x 인 경우는 건너뛰어야 한다. (마지막에 -1)
+    int answer = 1;
+    
+    unordered_map <string, int> kind;
+    
+    for(int i=0; i<clothes.size(); i++){
+        kind[clothes[i][1]]++;
+    }
+    
+    // 경우의수 항목1 x 항목2 x 항목3 ... -1
+    for(auto pair: kind){
+        // cout << pair.first << endl;
+        answer *= (pair.second+1);
+    }
+    
+    
+    return answer-1;
+}
+```
+
+
+
+### 베스트앨범
+
+https://programmers.co.kr/learn/courses/30/lessons/42579#
+
+#### 문제
+
+````
+스트리밍 사이트에서 장르 별로 가장 많이 재생된 노래를 두 개씩 모아 베스트 앨범을 출시하려 합니다. 노래는 고유 번호로 구분하며, 노래를 수록하는 기준은 다음과 같습니다.
+
+속한 노래가 많이 재생된 장르를 먼저 수록합니다.
+장르 내에서 많이 재생된 노래를 먼저 수록합니다.
+장르 내에서 재생 횟수가 같은 노래 중에서는 고유 번호가 낮은 노래를 먼저 수록합니다.
+
+노래의 장르를 나타내는 문자열 배열 genres와 노래별 재생 횟수를 나타내는 정수 배열 plays가 주어질 때, 베스트 앨범에 들어갈 노래의 고유 번호를 순서대로 return 하도록 solution 함수를 완성하세요.
+````
+
+#### 제한사항
+
+```
+genres[i]는 고유번호가 i인 노래의 장르입니다.
+plays[i]는 고유번호가 i인 노래가 재생된 횟수입니다.
+genres와 plays의 길이는 같으며, 이는 1 이상 10,000 이하입니다.
+장르 종류는 100개 미만입니다.
+장르에 속한 곡이 하나라면, 하나의 곡만 선택합니다.
+모든 장르는 재생된 횟수가 다릅니다.
+```
+
+#### 예시
+
+```
+## genres, plays, return
+[classic, pop, classic, classic, pop]	[500, 600, 150, 800, 2500]	[4, 1, 3, 0]
+```
+
+#### 풀이
+
+이 문제 역시 항목별 value를 정리하는 것이 중요한 문제이기 때문에 hash map을 사용하면 된다. Mapping을 시켜준 이후에 정렬을 해줘야 하는데 `sort` 함수를 사용해야한다. 하지만 조건이 달려있다. 재생횟수가 높은 장르 순서대로 나열하는 것은 문제가 되지 않지만, 하나의 장르 안에서 재생횟수가 높은 곡 순서대로 나열해야하며, **재생 횟수가 같으면 index는 낮은 순서부터 나열해야한다.** 이 문제를 해결하기 위해 `sort` 함수에 **3번째 인자를 받는 함수를 작성**해야한다. 3번째 인자에 들어가는 함수의 조건에 따라 `sort` 함수가 작동한다. 밑의 풀이에서 `compare 함수` 와 `compare_index` 함수에 이 기능을 구현해 놓았다. 
+
+1. `compare 함수` 는 pair vector를 인자로 받아 첫번째 pair value를 단순히 내림차순으로 바꾼다.
+2. `compare_index 함수` 는 pair vector를 인자로 받아 **두번째** pair value를 내림차순으로 바꾸고, 만약 이 값이 같으면 **첫번째** pair vlaue를 오름차순으로 바꾼다.
+
+```c++
+#include <iostream>
+#include <string>
+#include <vector>
+#include <algorithm>
+#include <unordered_map>
+
+using namespace std;
+
+bool compare(pair<int, string> a, pair<int, string> b){
+    return a.first > b.first;
+}
+
+bool compare_index(pair<int, int> a, pair<int, int> b){
+    if(a.second == b.second) return a.first < b.first;
+    return a.second > b.second;
+}
+
+vector<int> solution(vector<string> genres, vector<int> plays) {
+    vector<int> answer;
+    unordered_map <string, int> category;
+    vector < pair<int, string> > temp_list;
+    
+    for(int i=0; i<genres.size(); i++){
+        category[genres[i]] += plays[i];
+    }
+    
+    // 내림차순 정렬
+    for(auto pair: category){
+        temp_list.push_back(make_pair(pair.second, pair.first));
+    }
+    
+    
+    sort(temp_list.begin(), temp_list.end(), compare);
+    for(auto pair: temp_list){
+        cout << pair.second << pair.first << endl;
+    }
+    
+    // 가장 큰 genres category부터 genres vector에서 조회를 시작하자
+    
+    vector < pair <int, int> > playsIndex;
+    for(auto pair: temp_list){
+        // 장르 안에 수록된 곡들을 pair vector <index, plays>으로 만들자
+        // compare_index 함수로 pair.second(plays)는 내림차순, 같으면 pair.first(index)는 오름차순으로 만든다.
+        // 사실 pair.second가 같은 경우는 만들지 않아도 벡터에 넣을 때 자동으로 index가 낮은 값부터 들어간다.
+        for(int i=0; i<genres.size(); i++){
+            if(pair.second == genres[i]){
+                playsIndex.push_back(make_pair(i, plays[i]));
+            }
+        }
+        sort(playsIndex.begin(), playsIndex.end(), compare_index);
+        
+        // 정답 vector에 집어넣자.
+        for(int i=0; i<playsIndex.size(); i++){
+            if(i == 2) break;
+            answer.push_back(playsIndex[i].first);
+        }
+        
+        // for(auto pair: playsIndex){
+        //     cout << pair.first << ": "<< pair.second << endl;
+        // }
+        
+        playsIndex.clear();
+    }
+    
+    
+    return answer;
+}
+```
 
