--- a/_posts/2020-05-16-해시.md
+++ b/_posts/2020-05-16-해시.md
@@ -91,6 +91,35 @@ string solution(vector<string> participant, vector<string> completion) {
 
 
 
+#### python code
+
+```python
+def solution(participant, completion):
+    answer = ''
+    dict_name = {}
+    
+    # dictionary 모든 이름의 value를 0로
+    for name in participant:
+        dict_name[name] = 0
+    
+    # 동명이인 검사 및 이름 개수 등록
+    for name in participant:
+        dict_name[name] += 1
+        
+    # 완주자는 -1
+    for name in completion:
+        dict_name[name] -= 1
+    
+    # 완주하지 못한 사람 출력
+    for item in dict_name.items():
+        if item[1] == 1:
+            answer = item[0]
+    
+    return answer
+```
+
+
+
 ### 전화번호 목록
 
 https://programmers.co.kr/learn/courses/30/lessons/42577
@@ -145,6 +174,23 @@ bool solution(vector<string> phone_book) {
     }
     return answer;
 }
+```
+
+#### python code
+
+```python
+def solution(phone_book):
+    # str을 sort하면 접두사가 겹치는 것 순서로 정렬
+    phone_book = sorted(phone_book)
+    for i, number in enumerate(phone_book):
+        if i < len(phone_book) - 1:
+            # 현재 있는 번호가 뒤에 있는 번호의 접두사 일 때
+            if number == phone_book[i+1][:len(number)]:
+                answer = False
+                return answer
+    
+    answer = True
+    return answer
 ```
 
 
