--- a/_posts/2020-06-10-완전탐색.md
+++ b/_posts/2020-06-10-완전탐색.md
@@ -13,7 +13,7 @@ categories: [algorithm]
 
 ## 문제
 
-### 소수찾기 (`순열`)
+### 소수찾기
 
 https://programmers.co.kr/learn/courses/30/lessons/42746?language=cpp
 
@@ -43,7 +43,7 @@ numbers는 0~9까지 숫자만으로 이루어져 있습니다.
 
 #### 풀이
 
-주어진 숫자로 모든 조합의 숫자를 만드는 것이 포인트이다. 소수인지 검사하는 방법은 조합된 숫자까지 `for문`을 돌려 나누어지는 값이 있는지 확인해보면 되기 때문에 크게 어렵지 않다. 만들 수 있는 경우의 수는 $_{n}P_{1}, _{n}P_{2}, _{n}P_{3}, _{n}P_{4}, ..., _{n}P_{n}$ 이다. 
+주어진 숫자로 모든 조합의 숫자를 만드는 것이 포인트이다. 소수인지 검사하는 방법은 조합된 숫자까지 `for문`을 돌려 나누어지는 값이 있는지 확인해보면 되기 때문에 크게 어렵지 않다. 만들 수 있는 경우의 수는 $$_{n}P_{1}, _{n}P_{2}, _{n}P_{3}, _{n}P_{4}, ..., _{n}P_{n}$$ 이다. 
 
 ```c++
 # 소수 확인, (2 ~ 자기자신-1)로 나눠서 나머지가 있는지 확인
