--- a/_posts/2020-08-03-[알고리즘BOOK]순열과 조합.md
+++ b/_posts/2020-08-03-[알고리즘BOOK]순열과 조합.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "완전탐색"
+title:  "[알고리즘BOOK]순열과 조합"
 date:   2020-08-03 11:03:53 +0900
 categories: [algorithm]
-use_math: true
+use_math: True
 ---
 
 ## 순열
