--- a/_posts/2020-06-10-완전탐색 복사본.md
+++ b/_posts/2020-06-10-완전탐색 복사본.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "완전탐색"
 date:   2020-06-10 07:00:23 +0900
-categories: [algorithm]
+categories: [drupal]
 use_math: True
 ---
 
