--- a/_posts/2020-06-10-완전탐색.md
+++ b/_posts/2020-06-10-완전탐색.md
@@ -3,7 +3,7 @@ layout: post
 title:  "완전탐색"
 date:   2020-06-10 07:00:23 +0900
 categories: [algorithm]
-use_math: True
+use_math: true
 ---
 
 ## 완전탐색
