--- a/_posts/2020-08-03-[알고리즘BOOK]순열과 조합.md
+++ b/_posts/2020-08-03-[알고리즘BOOK]순열과 조합.md
@@ -78,16 +78,58 @@ def permut():
 permut()
 ```
 
-```text
-A 선택 ... visited는 [1, 0, 0, 0, 0]
-A B 선택 ... visited는 [1, 1, 0, 0, 0]
-.
-.
-.
-A B C D E 선택 ... visited는 [1, 1, 1, 1, 1]			*** pop, visited=0 *** RETRUN 직후이기 때문
-A B C D 선택 ... visited는 [1, 1, 1, 1, 0]				*** pop, visited=0 *** i가 
-A B C 선택 ... visited는 [1, 1, 1, 0, 0]
+<img src="https://raw.githubusercontent.com/jsstar522/jsstar522.github.io/master/static/img/_posts/20200803/1.png" alt="distribution" style="display:block; width:700px; margin: 0 auto;"/>
 
+재귀함수는 순서대로 작동하는 함수로 생각하면 굉장히 복잡하다. 같은 함수가 `복사`된다고 생각해야 편하다. 가장 위에 있는 함수가 실행되면 `recur` 함수안에 있는 for문이 실행되므로 같은 `recur` 함수 5개가 실행된다. **다섯개 중 첫번째 `recur` 가 실행되면 다시 for문이 실행되는데, `visited`가 1이면 그냥 지나치므로 앞서 방문했던 곳을 제외한 나머지 4개의 `recur` 함수를 실행한다.** 이런식으로 내려가다보면 모든 경우의 수를 탐색할 수 있다.
+
+`chosen`과 `visited`를 출력해보면 확실히 알 수 있다. 
+
+```python
+# 순열개수
+n = 0
+def permut():
+  problem = ['A', 'B', 'C', 'D', 'E']
+  # 방문 index
+  visited = [0 for _ in range(len(problem))]
+
+  # 완성된 배열
+  chosen = []
+
+  # 재귀함수
+  def recur(arr):
+    if len(chosen) == 5:
+      global n
+      n += 1
+      # print(n, " : ", chosen)
+      return chosen
+
+    for i in range(len(arr)):
+      if not visited[i]:
+        chosen.append(arr[i])
+        visited[i] = 1
+        print(chosen, " ", visited)
+        recur(arr)
+        chosen.pop()
+        visited[i] = 0
+
+  recur(problem)
+
+permut()
+
+# ['A']   [1, 0, 0, 0, 0]
+# ['A', 'B']   [1, 1, 0, 0, 0]
+# ['A', 'B', 'C']   [1, 1, 1, 0, 0]
+# ['A', 'B', 'C', 'D']   [1, 1, 1, 1, 0]
+# ['A', 'B', 'C', 'D', 'E']   [1, 1, 1, 1, 1]
+# ['A', 'B', 'C', 'E']   [1, 1, 1, 0, 1]
+# ['A', 'B', 'C', 'E', 'D']   [1, 1, 1, 1, 1]
+# ['A', 'B', 'D']   [1, 1, 0, 1, 0]
+# ['A', 'B', 'D', 'C']   [1, 1, 1, 1, 0]
+# ['A', 'B', 'D', 'C', 'E']   [1, 1, 1, 1, 1]
+# ['A', 'B', 'D', 'E']   [1, 1, 0, 1, 1]
+# ['A', 'B', 'D', 'E', 'C']   [1, 1, 1, 1, 1]
+# ['A', 'B', 'E']   [1, 1, 0, 0, 1]
+# ...
 
 ```
 
