--- a/_posts/2020-08-03-[알고리즘BOOK]순열과 조합.md
+++ b/_posts/2020-08-03-[알고리즘BOOK]순열과 조합.md
@@ -29,17 +29,18 @@ visited = [0 for _ in range(len(problem))]
 **기본적으로 순열은 재귀함수를 통하여 무한 loop를 구성한다.** 그리고 무한 loop를 빠져나오기 위해서 return 조건을 걸어줘야하는데, 나는 요소를 선택하는 loop을 구성하기 전에 return의 조건을 먼저 적어두는 것이 편해서 먼저 작성한다. 완성된 배열이 `chosen` 이라고 할 때, `chosen` 의 길이가 5이면 return 한다.
 
 ```python
-problem = ['A', 'B', 'C', 'D', 'E']
-# 방문 index
-visited = [0 for _ in range(len(problem))]
+def permut():
+  problem = ['A', 'B', 'C', 'D', 'E']
+  # 방문 index
+  visited = [0 for _ in range(len(problem))]
 
-# 완성된 배열
-chosen = []
-# 재귀함수
-def permut(arr):
-  if len(chosen) == 5:
-    print(chosen)
-    return chosen
+  # 완성된 배열
+  chosen = []
+  # 재귀함수
+  def recur(arr):
+    if len(chosen) == 5:
+      print(chosen)
+      return chosen
 ```
 
 ### Loop
@@ -56,7 +57,6 @@ def permut():
 
   # 완성된 배열
   chosen = []
-
   # 재귀함수
   def recur(arr):
     if len(chosen) == 5:
@@ -94,7 +94,6 @@ def permut():
 
   # 완성된 배열
   chosen = []
-
   # 재귀함수
   def recur(arr):
     if len(chosen) == 5:
@@ -135,7 +134,57 @@ permut()
 
 
 
+## 조합
 
+조합은 `순서를 고려하지 않고` 만든 경우의 수를 말한다. 중복을 허용하지 않기 때문에 [가, 나, 다] 중 3개의 요소를 가지고 있는 조합은 [가, 나, 다] 하나이다. 2개의 요소를 가지고 있는 조합은 [가, 나], [나, 다], [가, 다]로 3개이다.
 
+### 선택된 수 다음을 표시하는 index
 
+순열과 다르게 조합은 visited와 같은 선택된 수를 표시하는 index가 필요하지 않다. 왜냐하면 `한 방향`으로만 선택하면 되기 때문이다. 예를들어 [A, B, C, D, E]가 있을 때, 3개의 요소를 포함하는 조합은 다음과 같이 구할 수 있다.
+
+<img src="https://raw.githubusercontent.com/jsstar522/jsstar522.github.io/master/static/img/_posts/20200803/2.png" alt="distribution" style="display:block; width:700px; margin: 0 auto;"/>
+
+즉, 뒤로 돌아가는 일만 없으면 중복을 피할 수 있다. **위 그림을 보면 각 `recur` 함수 이후에 불러오는 재귀 함수 중 앞에 오는 요소를 선택하는 일은 없다.**
+
+### Return 조건
+
+Return 조건은 앞서 순열과 마찬가지로 `chosen` 배열의 길이가 선택하는 요소의 수와 같으면 return 한다.
+
+```python
+def combin():
+  problem = ['A', 'B', 'C', 'D', 'E']
+  
+  # 완성된 배열 
+  chosen = []
+  # 재귀함수
+  def recur(arr):
+    if len(chosen) == 3:
+      print(chosen)
+      return
+```
+
+### Loop
+
+조합에서 무한 loop을 돌 때, 앞서 말한 바와 같이 앞의 요소를 선택하는 재귀함수를 불러오면 안되므로 for문의 index가 계속 0부터 시작하면 안된다. 매번 재귀함수를 호출할 때, 현재 위치의 다음 index을 매개변수로 전달해야 한다.
+
+```python
+def combin():
+  problem = ['A', 'B', 'C', 'D', 'E']
+  
+  # 완성된 배열 
+  chosen = []
+  def recur(arr, nxt):
+    if len(chosen) == 3:
+      print(chosen)
+      return
+
+    for i in range(nxt, len(arr)):
+      chosen.append(arr[i])
+      recur(arr, i+1)
+      chosen.pop()
+    
+  recur(problem, 0)
+
+combin()
+```
 
