--- a/_posts/2020-08-06-이미지 비율 맞추기.md
+++ b/_posts/2020-08-06-이미지 비율 맞추기.md
@@ -87,9 +87,46 @@ categories: [web]
 </html>
 ```
 
+마지막으로 이렇게 그림의 비율을 유지하며 나머지 부분을 숨길경우 **그림의 가운데 위주로 나오길 바라는 경우가 많다.** 이때는 `container div` 의 position을 relative로 바꿔주고 `자식 div`을 정가운데로 놔주면 된다.
 
+```html
+<!DOCTYPE html>
+<html>
+<style>
 
+.container{
+  position: relative;
+  border: 3px solid red;
+  margin: 0 auto;
+  width: 95vw;
+  height: 120vw;
+  overflow: hidden;
+}
+.container img{
+  width: auto;
+  height: 100%;
+  position: absolute;
+  top: -9999px;
+  bottom: -9999px;
+  left: -9999px;
+  right: -9999px;
+  margin: auto;
+}
 
+</style>
+<body>
+
+<div class="container">
+  <img src="pic_trulli.jpg">
+</div>
+
+</body>
+</html>
+```
+
+이제 그림이 어마어마하게 크지 않은 이상 (-9999px로 이동시켜도 사진이 잘리는 경우) 가운데 위주로 그림이 보일 것이다.
+
+<img src="https://raw.githubusercontent.com/jsstar522/jsstar522.github.io/master/static/img/_posts/20200806/6.png" alt="distribution" style="display:block; width:700px; margin: 0 auto;"/>
 
 
 
