--- a/_posts/2020-09-02-[알고리즘BOOK] Trie구조.md
+++ b/_posts/2020-09-02-[알고리즘BOOK] Trie구조.md
@@ -50,3 +50,22 @@ class Trie:
             return False    # 경로에 있는 단어인 경우 return False
 ```
 
+```python
+> trie = Trie()
+> trie.add("carry")
+> trie.add("car")
+> trie.add("dog")
+> trie.search("carry")
+True
+> trie.search("car")
+True
+> trie.search("care")
+False
+```
+
+```python
+> trie.head
+{'c': {'a': {'r': {'*': True, 'r': {'y': {'*': True}}}}},
+ 'd': {'o': {'g': {'*': True}}}}
+```
+
