--- a/_posts/2020-09-02-[알고리즘BOOK] Trie구조.md
+++ b/_posts/2020-09-02-[알고리즘BOOK] Trie구조.md
@@ -27,7 +27,8 @@ Trie 구조는 검색을 뜻하는 `retrieval (검색)`에서 딴 이름이다. 
 
 ```python
 class Trie:
-    head = {}
+		def __init__(self):
+    		self.head = {}
 
     # s는 들어갈 string
     def add(self, s):
