--- a/_posts/2020-09-03-[KAKAO2020BLIND] 가사검색.md
+++ b/_posts/2020-09-03-[KAKAO2020BLIND] 가사검색.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[KAKAO2020BLIND] 가사검색"
+title:  "[KAKAO2020BLIND] 가사검색 (+효율성 테스트 3번 반례)"
 date:   2020-09-03 08:28:00 +0900
 categories: [algorithm]
 use_math: true
@@ -11,174 +11,138 @@ use_math: true
 ### 문제
 
 ```
-카카오에 신입 개발자로 입사한 콘은 선배 개발자로부터 개발역량 강화를 위해 다른 개발자가 작성한 소스 코드를 분석하여 문제점을 발견하고 수정하라는 업무 과제를 받았습니다. 소스를 컴파일하여 로그를 보니 대부분 소스 코드 내 작성된 괄호가 개수는 맞지만 짝이 맞지 않은 형태로 작성되어 오류가 나는 것을 알게 되었습니다.
-수정해야 할 소스 파일이 너무 많아서 고민하던 콘은 소스 코드에 작성된 모든 괄호를 뽑아서 올바른 순서대로 배치된 괄호 문자열을 알려주는 프로그램을 다음과 같이 개발하려고 합니다.
+[본 문제는 정확성과 효율성 테스트 각각 점수가 있는 문제입니다.]
+
+친구들로부터 천재 프로그래머로 불리는 프로도는 음악을 하는 친구로부터 자신이 좋아하는 노래 가사에 사용된 단어들 중에 특정 키워드가 몇 개 포함되어 있는지 궁금하니 프로그램으로 개발해 달라는 제안을 받았습니다.
+그 제안 사항 중, 키워드는 와일드카드 문자중 하나인 '?'가 포함된 패턴 형태의 문자열을 뜻합니다. 와일드카드 문자인 '?'는 글자 하나를 의미하며, 어떤 문자에도 매치된다고 가정합니다. 예를 들어 "fro??"는 "frodo", "front", "frost" 등에 매치되지만 "frame", "frozen"에는 매치되지 않습니다.
+
+가사에 사용된 모든 단어들이 담긴 배열 words와 찾고자 하는 키워드가 담긴 배열 queries가 주어질 때, 각 키워드 별로 매치된 단어가 몇 개인지 순서대로 배열에 담아 반환하도록 solution 함수를 완성해 주세요.
 ```
 
 
 
-### 용어의 정의
+### 가사 단어 제한사항
 
 ```
-'(' 와 ')' 로만 이루어진 문자열이 있을 경우, '(' 의 개수와 ')' 의 개수가 같다면 이를 균형잡힌 괄호 문자열이라고 부릅니다.
-그리고 여기에 '('와 ')'의 괄호의 짝도 모두 맞을 경우에는 이를 올바른 괄호 문자열이라고 부릅니다.
-예를 들어, "(()))("와 같은 문자열은 균형잡힌 괄호 문자열 이지만 올바른 괄호 문자열은 아닙니다.
-반면에 "(())()"와 같은 문자열은 균형잡힌 괄호 문자열 이면서 동시에 올바른 괄호 문자열 입니다.
-
-'(' 와 ')' 로만 이루어진 문자열 w가 균형잡힌 괄호 문자열 이라면 다음과 같은 과정을 통해 올바른 괄호 문자열로 변환할 수 있습니다.
-
-1. 입력이 빈 문자열인 경우, 빈 문자열을 반환합니다. 
-2. 문자열 w를 두 "균형잡힌 괄호 문자열" u, v로 분리합니다. 단, u는 "균형잡힌 괄호 문자열"로 더 이상 분리할 수 없어야 하며, v는 빈 문자열이 될 수 있습니다. 
-3. 문자열 u가 "올바른 괄호 문자열" 이라면 문자열 v에 대해 1단계부터 다시 수행합니다. 
-  3-1. 수행한 결과 문자열을 u에 이어 붙인 후 반환합니다. 
-4. 문자열 u가 "올바른 괄호 문자열"이 아니라면 아래 과정을 수행합니다. 
-  4-1. 빈 문자열에 첫 번째 문자로 '('를 붙입니다. 
-  4-2. 문자열 v에 대해 1단계부터 재귀적으로 수행한 결과 문자열을 이어 붙입니다. 
-  4-3. ')'를 다시 붙입니다. 
-  4-4. u의 첫 번째와 마지막 문자를 제거하고, 나머지 문자열의 괄호 방향을 뒤집어서 뒤에 붙입니다. 
-  4-5. 생성된 문자열을 반환합니다.
-균형잡힌 괄호 문자열 p가 매개변수로 주어질 때, 주어진 알고리즘을 수행해 올바른 괄호 문자열로 변환한 결과를 return 하도록 solution 함수를 완성해 주세요.
+words의 길이(가사 단어의 개수)는 2 이상 100,000 이하입니다.
+각 가사 단어의 길이는 1 이상 10,000 이하로 빈 문자열인 경우는 없습니다.
+전체 가사 단어 길이의 합은 2 이상 1,000,000 이하입니다.
+가사에 동일 단어가 여러 번 나올 경우 중복을 제거하고 words에는 하나로만 제공됩니다.
+각 가사 단어는 오직 알파벳 소문자로만 구성되어 있으며, 특수문자나 숫자는 포함하지 않는 것으로 가정합니다.
 ```
 
 
 
-### 매개변수 설명
+### 검색 키워드 제한사항
 
-- p는 '(' 와 ')' 로만 이루어진 문자열이며 길이는 2 이상 1,000 이하인 짝수입니다.
-- 문자열 p를 이루는 '(' 와 ')' 의 개수는 항상 같습니다.
-- 만약 p가 이미 올바른 괄호 문자열이라면 그대로 return 하면 됩니다.
+```
+queries의 길이(검색 키워드 개수)는 2 이상 100,000 이하입니다.
+각 검색 키워드의 길이는 1 이상 10,000 이하로 빈 문자열인 경우는 없습니다.
+전체 검색 키워드 길이의 합은 2 이상 1,000,000 이하입니다.
+검색 키워드는 중복될 수도 있습니다.
+각 검색 키워드는 오직 알파벳 소문자와 와일드카드 문자인 '?' 로만 구성되어 있으며, 특수문자나 숫자는 포함하지 않는 것으로 가정합니다.
+검색 키워드는 와일드카드 문자인 '?'가 하나 이상 포함돼 있으며, '?'는 각 검색 키워드의 접두사 아니면 접미사 중 하나로만 주어집니다.
+예를 들어 "??odo", "fro??", "?????"는 가능한 키워드입니다.
+반면에 "frodo"('?'가 없음), "fr?do"('?'가 중간에 있음), "?ro??"('?'가 양쪽에 있음)는 불가능한 키워드입니다.
+```
 
 
 
 ### 예시
 
 ```
-# p,	result
-"(()())()"	"(()())()"
-")("	"()"
-"()))((()"	"()(())()"
+## words queries result
+["frodo", "front", "frost", "frozen", "frame", "kakao"]	["fro??", "????o", "fr???", "fro???", "pro?"]	[3, 2, 4, 1, 0]
 ```
 
 
 
 ### 풀이
 
-문제가 굉장히 복잡하다. 괄호조합에는 두가지 종류가 있다. `균형잡힌 괄호 문자열` 은 `(` 와 `)` 의 개수가 같은 것이고, `올바른 괄호 문자열` 은 `()`순서로 없애나가면 빈 문자열이 되는 것이다. 이 두가지 규칙만 잘 만들어 놓으면 위에서 시키는 대로 하면 된다. 균현잡힌 괄호 문자열은 `(` 일 때 -1, `)` 일 때 +1을 연산하고 결과가 0이면 균형잡힌 문자열이다. 올바른 괄호 문자열은 `()` 을 빈 문자열로 대체해 나아가면 확인할 수 있다.
+처음 문제를 풀 때는 words 안에 있는 문자의 오른쪽, 왼쪽을 시작으로 `?` 을 추가하면서 queries와 일치하는지 확인해가면 문제를 풀었다. 모든 문제가 정상적으로 풀렸지만 효율성에서 실패가 떴다.
+
+String 검색 문제는 trie 자료구조를 사용하여 풀면 편하다. (공간 복잡도를 확 줄일 수 있다.) 이 문제는 일반적으로 단어를 검색하는 문제는 아니다. **`?` 을 포함하고 있고 여기에는 어떠한 알파벳이 들어가도 되기 때문이다. 그래서 풀고자하는 방식은 `?`가 나오기 전까지 검색을 진행하고, `?` 가 나오면 단어의 length가 일치하는지 확인하는 것이다.** 예를들어 "fro??"이면, words 배열에서 "fro"을 가진 5자리의 모든 단어가 올 수 있다. **Trie은 줄기를 타고 내려가면서 검색하기 때문에 node마다 그 node 아래에 있는 단어 길이의 개수를 저장해두면 재검색 없이 그때 그때 바로 return할 수 있다.**
+
+<img src="https://raw.githubusercontent.com/jsstar522/jsstar522.github.io/master/static/img/_posts/20200903/1.png" alt="distribution" style="display:block; width:700px; margin: 0 auto;"/>
+
+**Trie에서, 각 노드를 만들 때마다 각 노드에 현재 단어의 length을 계속 넣어주고 같은 것이 있으면 +1을 해주면 된다.** 검색을 할 때는 ?을 만났을 때, 그 바로 직전 알파벳에 들어 있는 단어 길이의 개수를 출력하면 된다.
 
 ```python
-def solution(p):
-    # 올바른 문자열 체크
-    def check_right(s):
-        new = s
-        # 2개를 1개로 줄이는 과정이므로 len(s)/2 만큼 줄임
-        for _ in range(0, int(len(s)/2)):
-            new = new.replace("()", "")
-        
-        if not new: return True
-        else: return False
-        
-    # 괄호를 바꿔주는 함수
-    def convertor(s):
-        s = s[1:-1]
-        new_s = ""
-        for i in range(0, len(s)):
-            if s[i]=='(': new_s += ')'
-            else: new_s += '('
-        return new_s
+def solution(words, queries):
+    # trie 구조 이용
     
-    # 재귀함수
-    def recur(p):
-        answer = ''
-        u = ""; v = ""
-        
-        # 1. 빈 문자열일 경우, 이미 올바른 문자열일 경우
-        if not p: return ""
-        if check_right(p): return p
+    answer = []
 
-        # 2. u, v로 분리 (u은 더이상 구분할 수 없는 균형잡힌 문자열일 때까지), "("와 ")"의 개수의 합이 0이 될 때까지
-        u_cnt = 0
-        i = 0
-        while 1:
-            u += p[i]
-            if p[i] == '(': u_cnt += 1
-            else: u_cnt -= 1
-            i += 1
-            if u_cnt == 0: break
-        for j in range(i, len(p)):
-            v += p[j]
-        
-        print("u: ", u)
-        print("v: ", v)
-        
-        # 3. u가 올바른 문자열일 때 (v도 올바른 문자열이면 그대로 반환됨, 아닐경우에 v가 u가 됨)
-        if check_right(u):
-            print("올바른")
-            answer += u + recur(v)
-        # 4. u가 올바른 문자열이 아닐 때
+    class Trie():
+        def __init__(self):
+            self.head = {}
+
+        def add(self, s):
+            now = self.head
+            # ?????와 같은 것을 방지 (root에도 string length 저장)
+            if len(s) in now:
+                now[len(s)] += 1
+            else:
+                now[len(s)] = 1
+            
+            for ss in s:
+                if ss not in now:
+                    now[ss] = {}
+                
+                # 같은 문자열 길이가 있으면 +1 없으면 새로 만듦
+                if len(s) in now[ss]:
+                    now[ss][len(s)] += 1
+                else:
+                    now[ss][len(s)] = 1
+                    
+                now = now[ss]
+
+        def search(self, s):
+            now = self.head
+            for ss in s:
+                # ?을 만나면 단어 length가 같은것 return
+                if ss == '?':
+                    if len(s) in now:
+                        return now[len(s)]
+                    else:
+                        return 0
+                # 아예 없는 문자열을 만나면 False
+                if ss not in now:
+                    return 0
+                
+                now = now[ss]
+    
+    # 정방향
+    trie = Trie()
+    for word in words:
+        trie.add(word)
+    # 역방향
+    rTrie = Trie()
+    for word in words:
+        rTrie.add(word[::-1])
+    
+    for q in queries:
+        if q[0] == '?':
+            answer.append(rTrie.search(q[::-1]))
         else:
-            print("올바르지않은")
-            answer += '('+recur(v)+')'
-            answer += convertor(u)
+            answer.append(trie.search(q))
     
-    if check_right(p): return p
-    recur(p)
-    
-    answer = ''
     return answer
 ```
 
-처음에는 위에 식처럼 풀었으나 답이 나오지 않았다. 알고보니 재귀 함수 마지막 부분에서 return을 하지 않았다.
 
-위의 식은 `recur` 함수의 return이 없다.
+
+### 효율성 테스트 3번 반례
+
+효율성 3번에서 계속 시간초과가 나와서 검색을 하다가 3번은 모두 물음표가 들어가 있는 "?????"와 같은 형태라고 한다. 따져보니 trie의 root 부분에는 단어길이가 저장되어 있지 않아서 시간초과가 나는 것 같았다. `add` 메서드 쪽에 아래와 같이 맨처음에 초기화를 해준 뒤, node을 만들어가면 된다.
 
 ```python
-# 올바른 문자열 체크
-def check_right(s):
-    new = s
-    # 2개를 1개로 줄이는 과정이므로 len(s)/2 만큼 줄임
-    for _ in range(0, int(len(s)/2)):
-        new = new.replace("()", "")
-
-    if not new: return True
-    else: return False
-
-# 괄호를 바꿔주는 함수
-def convertor(s):
-    s = s[1:-1]
-    new_s = ""
-    for i in range(0, len(s)):
-        if s[i]=='(': new_s += ')'
-        else: new_s += '('
-    return new_s
-
-def solution(p):
-    answer = ''
-    u = ""; v = ""
-
-    # 1. 빈 문자열일 경우, 이미 올바른 문자열일 경우
-    if not p: return ""
-    if check_right(p): return p
-
-    # 2. u, v로 분리 (u은 더이상 구분할 수 없는 균형잡힌 문자열일 때까지), "("와 ")"의 개수의 합이 0이 될 때까지
-    u_cnt = 0
-    i = 0
-    while 1:
-        u += p[i]
-        if p[i] == '(': u_cnt += 1
-        else: u_cnt -= 1
-        i += 1
-        if u_cnt == 0: break
-    for j in range(i, len(p)):
-        v += p[j]
-
-    # 3. u가 올바른 문자열일 때 (v도 올바른 문자열이면 그대로 반환됨, 아닐경우에 v가 u가 됨)
-    if check_right(u):
-        answer += u + solution(v)
-    # 4. u가 올바른 문자열이 아닐 때
-    else:
-        answer += '('+solution(v)+')'
-        answer += convertor(u)
-    
-    return answer
+						# ...
+						# ?????와 같은 것을 방지 (root에도 string length 저장)
+            if len(s) in now:
+                now[len(s)] += 1
+            else:
+                now[len(s)] = 1
+            # ...
 ```
 
