--- a/_posts/2020-09-03-[자주하는실수] 재귀의 return.md
+++ b/_posts/2020-09-03-[자주하는실수] 재귀의 return.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "sorted와 int변환의 복잡도"
+title:  "[자주하는실수] 재귀의 return"
 date:   2020-09-03 18:50:00 +0900
 categories: [algorithm]
 use_math: true
