--- a/_posts/2020-06-10-[프로그래머스] 완전탐색.md
+++ b/_posts/2020-06-10-[프로그래머스] 완전탐색.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "완전탐색"
+title:  "[프로그래머스] 완전탐색"
 date:   2020-06-10 11:12:04 +0900
 categories: [algorithm]
 use_math: true
