--- a/_posts/2020-08-07-[프로그래머스] BFS와 DFS.md
+++ b/_posts/2020-08-07-[프로그래머스] BFS와 DFS.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "BFS와 DFS"
+title:  "[프로그래머스] BFS와 DFS"
 date:   2020-08-07 10:03:42 +0900
 categories: [algorithm]
 use_math: true
