--- a/_posts/2020-09-10-[알고리즘BOOK] Heap 자료구조.md
+++ b/_posts/2020-09-10-[알고리즘BOOK] Heap 자료구조.md
@@ -210,3 +210,80 @@ print(heap.heap_array)
 # [None, 5, 4]
 ```
 
+
+
+## 파이썬 모듈
+
+파이썬에서 간단하게 `heapq` 을 불러와서 사용할 수 있다.
+
+```python
+import heapq
+```
+
+### 추가
+
+```python
+import heapq
+
+heap = []
+heapq.heappush(heap, 4)
+print(heap)
+heapq.heappush(heap, 8)
+print(heap)
+heapq.heappush(heap, 2)
+print(heap)
+heapq.heappush(heap, 11)
+print(heap)
+heapq.heappush(heap, 15)
+print(heap)
+
+# [4]
+# [4, 8]
+# [2, 8, 4]
+# [2, 8, 4]
+# [2, 8, 4, 11]
+# [2, 8, 4, 11, 15]
+```
+
+`heapq` 을 이용하면 최소 heap으로 구현되는 것을 알 수 있다. **최대 heap을 구하려면 -을 붙여서 넣어둔 다음 `pop` 할 때, -을 다시 붙여서 뱉으면 된다.**
+
+### 삭제
+
+```python
+print(heapq.heappop(heap))
+print(heap)
+
+# 2
+# [4, 8, 15, 11]
+```
+
+### List을 Heap으로 변환
+
+```python
+heap = [11, 15, 8, 2, 4]
+heapq.heapify(heap)
+print(heap)
+
+# [2, 4, 8, 15, 11]
+```
+
+### 최대 heap
+
+최대를 비교하기 위해 `-` 가 붙은 수를 앞에 세우고 tuple 형태로 heap에 집어 넣는다.
+
+```python
+num = [11, 15, 8, 2, 4]
+heap = []
+
+for n in num:
+  heapq.heappush(heap, (-n, n))
+while heap:
+  print(heapq.heappop(heap)[1])
+  
+# 15
+# 11
+# 8
+# 4
+# 2
+```
+
