--- a/_posts/2020-08-07-[프로그래머스] BFS와 DFS.md
+++ b/_posts/2020-08-07-[프로그래머스] BFS와 DFS.md
@@ -64,7 +64,7 @@ n개의 음이 아닌 정수가 있습니다. 이 수를 적절히 더하거나 
 
 조잡하지만 위와 같은 방식으로 `len(numbers)` 만큼의 depth까지 내려갈 것이다. 그리고 매 순간 (level)의 선택은 + 또는 - 이므로 visited은 [0, 0] 이면 된다. 경우의 수 (다른 경로도 탐색) 이므로 백트래킹을 이용한다.
 
-```c++
+```python
 def solution(numbers, target):
     answer = 0
     # 숫자의 순서는 상관없음
@@ -168,7 +168,7 @@ A ㅡ B
 
 위와 같을 경우에 A, B, C, D, E가 하나의 네트워크에 있다는 뜻이다. 이 그림을 90도 돌려보면 tree 형태임을 알 수 있다! 그리고 좌우로 확인해가면서 edge로 연결되어 있는지 확인하면 같은 네트워크인지 알 수 있다. 즉, BFS을 이용하면 된다.
 
-```c++
+```python
 def solution(n, computers):
     # 1ㅡ2
     #  ㄴ3 으로 연결되어 있으면 2, 3이 연결되어 있지 않더라도 하나의 네트워크이므로 BFS를 사용하자
