--- a/_posts/2020-09-08-데이터 사이언스 질문 모음.md
+++ b/_posts/2020-09-08-데이터 사이언스 질문 모음.md
@@ -24,10 +24,13 @@ use_math: true
   * 문장이 제대로 되었는지 파악하려면 토큰화를 해봐야하는데 토큰화를 하려면 먼저 띄어쓰기가 잘 되어 있어야 합니다. 띄어쓰기를 수정하는 모델이 필요하고 띄어쓰기 수정이 이루어지면 토큰화를 해야합니다. 토큰화를 한 뒤 문장이 자연스러운지 평가해야합니다. 예를 들어 "친구랑 코피를 마셨어"라는 단어는 부자연스럽기 때문에 단어를 바꿔줘야한다는 판단을 내려야 합니다. "코피"와 비슷한 발음이 나는 단어들 중 문맥에 가장 잘 어울리는 단어를 대입시킵니다. 이는 검색창에서 오타를 냈을 때 "~을 검색했나요?"라고 나오는 것 기능과 비슷할 것 같습니다.
 * 잠재론적, 의미론적 색인은 무엇이고 어떻게 적용할 수 있을까요?
 * 영어 텍스트를 다른 언어로 번역할 시스템을 어떻게 구축해야 할까요?
+  * 
 * 뉴스 기사를 주제별로 자동 분류하는 시스템을 어떻게 구축할까요?
+  * 리뷰 데이터 분류 (긍정, 부정)보다 더 넓은 네트워크를 구축해야합니다. 왜냐하면 카테고리가 굉장히 많을 수 있기 때문입니다. 네트워크가 좁으면 각 카테고리에 대한 정보가 없어질 가능성이 있습니다. 학습이 시작되기 전, 각각의 뉴스 기사데이터는 형태소 분류와 POS taggin이 이루어져야 합니다. 그리고 모든 단어들에 대해 토큰화를 시켜주고 벡터화 해줍니다. (임베딩) 입력값은 뉴스 기사 데이터가 될 것이고, 출력값은 카테고리가 될 것이며 카테고리 개수에 맞는 크기의 벡터를 출력해야 합니다. 그렇기 때문에 마지막 activation function은 softmax을 사용하면 되고, loss function은 categorical cross_entropy을 사용하면 됩니다.
+  * Softmax 함수는 출력값의 class 분류 (category 분류)를 위해 정규화를 해주는 함수입니다. 벡터 형태로 바꿔주며 모든 요소의 합은 항상 1입니다. 어느 한 벡터의 요소가 가장 크다면 그 input 값은 가장 큰 값을 가지고 있는 요소가 의미하는 카테고리라고 할 수 있습니다.
 * Stop Words은 무엇일까요? 이것을 왜 제거해야 하나요?
 * 영화 리뷰가 긍정적인지 부정적인지 예측하기 위해 모델을 어떻게 설계하시겠나요?
-  * 먼저 리뷰 데이터가 필요합니다. 리뷰에 대한 긍정(1), 부정(0)의 label이 포함되어 있어야 합니다. 학습이 시작되기 전, 각각의 리뷰데이터는 형태소 분류와 POS tagging이 이루어져야 합니다. 그리고 모든 단어들에 대해 토큰화를 시켜주고 이를 벡터화 해줍니다. (임베딩) 한 리뷰에 대한 인스턴스가 layer를 통과하면 이에 대한 예측값을 출력할 수 있도록 네트워크를 구성시킨 뒤에 학습을 시키면 됩니다.
+  * 먼저 리뷰 데이터가 필요합니다. 리뷰에 대한 긍정(1), 부정(0)의 label이 포함되어 있어야 합니다. 학습이 시작되기 전, 각각의 리뷰데이터는 형태소 분류와 POS tagging이 이루어져야 합니다. 그리고 모든 단어들에 대해 토큰화를 시켜주고 이를 벡터화 해줍니다. (임베딩) 한 리뷰에 대한 인스턴스가 layer를 통과하면 이에 대한 예측값(긍정, 부정)을 출력할 수 있도록 네트워크를 구성시킨 뒤에 학습을 시키면 됩니다. 데이터는 문장으로 되어 있어 sequence 데이터이기 때문에 모델은 RNN으로 설계해야 합니다. 특히 LSTM으로 구성하면 더 성능이 좋습니다.
 * TF-IDF 점수는 무엇이며 어떤 경우 유용한가요?
 * 한국어에서 많이 사용되는 사전은 무엇인가요?
 * Regular grammar은 무엇인가요? Regular expression과 무슨 차이가 있나요?
