--- a/_posts/2020-09-10-[알고리즘BOOK] Heap 자료구조.md
+++ b/_posts/2020-09-10-[알고리즘BOOK] Heap 자료구조.md
@@ -16,7 +16,7 @@ use_math: true
 
 ## 특징
 
-**각 노드 (부모노드)은 자식노드 보다 무조건 크거나 같다. `부모노드 < 자식노드들` 을 만족한다.** 이 점이 이진노드와의 차이점이다. 이진 노드는 부모노드와의 크기비교 상관없이 `왼쪽노드 < 오른쪽노드` 만 만족시키면 된다. 
+**각 노드 (부모노드)은 자식노드 보다 무조건 크거나 같다 (Max Heap인 경우). `부모노드 > 자식노드들` 을 만족한다.** 이 점이 이진노드와의 차이점이다. 이진 노드는 부모노드와의 크기비교 상관없이 `왼쪽노드 < 오른쪽노드` 만 만족시키면 된다. 
 
 
 
