--- a/_posts/2020-09-10-[프로그래머스] Heap 자료구조.md
+++ b/_posts/2020-09-10-[프로그래머스] Heap 자료구조.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[프로그래머스] BFS와 DFS"
+title:  "[프로그래머스] Heap 자료구조"
 date:   2020-09-10 18:21:00 +0900
 categories: [algorithm]
 use_math: true
