--- a/_posts/2020-09-10-[알고리즘BOOK] Heap 자료구조.md
+++ b/_posts/2020-09-10-[알고리즘BOOK] Heap 자료구조.md
@@ -162,7 +162,7 @@ class Heap():
                 else:
                     return False
 
-    def pop(self, data):
+    def pop(self):
         if len(self.heap_array) <= 1:
             return None
 
@@ -176,6 +176,7 @@ class Heap():
             right_child_popped_idx = popped_idx*2 + 1
             if right_child_popped_idx >= len(self.heap_array):  # 왼쪽 child만 있는 경우
                 self.heap_array[popped_idx], self.heap_array[left_child_popped_idx] = self.heap_array[left_child_popped_idx], self.heap_array[popped_idx]
+                popped_idx = left_child_popped_idx
             else:
                 # child node 중에서 오른쪽
                 if self.heap_array[left_child_popped_idx] > self.heap_array[right_child_popped_idx]:
