--- a/_posts/2020-09-14-[백준 14890번] 경사로.md
+++ b/_posts/2020-09-14-[백준 14890번] 경사로.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "[백준 14890번] 경사로.md"
+title:  "[백준 14890번] 경사로"
 date:   2020-09-14 13:41:00 +0900
 categories: [algorithm]
 use_math: true
