--- a/_posts/2020-12-03-변수, 상수와 리터럴.md
+++ b/_posts/2020-12-03-변수, 상수와 리터럴.md
@@ -16,10 +16,10 @@ package java_basic;
 public class variable {
 
 	public static void main(String[] args) {
-    int a;
-    a = 10;
-    a = 20;
-    System.out.println(a+1);	// 21
+		int a;
+		a = 10;
+		a = 20;
+		System.out.println(a+1);	// 21
 	}
   
 }
@@ -55,10 +55,10 @@ String a = "Hello world!";
 `상수` 는 변수와 다르게 값이 변하지 않는 공간을 의미한다. 자바에서 `final` 을 통해 값을 할당할 수 있다. 다만 다음과 같은 규칙으로 값을 할당해야 한다.
 
 ```java
-final int a = 0;	// 선언과 동시에 할당
+final int a = 0;		// 선언과 동시에 할당
 
-final int a;	// **에러발생!**
-a = 0	// **에러발생!**
+final int a;		// **에러발생!**
+a = 0;		// **에러발생!**
 ```
 
 상수는 값이 변할 수 없는 공간이기 때문에 선언과 동시에 값을 할당해야 하고 나중에 그 값을 바꿀 수 없다. **값이 변하지 않거나 변경하지 못하게 하고 싶을 때 상수를 사용한다.**
